--- a/_cobalt.yml
+++ b/_cobalt.yml
@@ -3,7 +3,7 @@ destination: docs
 site:
   title: Wildberry Wood Outdoor Learning
   description: 
-  base_url: http://example.com
+  base_url: https://wildberrywood.co.uk
 pages:
   default:
     layout: default.liquid
